examples/fail/unexpected_eof.uplp
-- test: fail { "category": "Parse.unexpected_token", "metadata": { "loc": 9, "tok": "eof" } }
let x = 1
